<resources>
    <string name="app_name">CountryPedia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country_name">Algeria</string>
    <string name="capital_name">Algiers</string>
    <string name="know_more_text">Know more about this country</string>
    <string name="country_search">What country are you looking for?</string>
    <string name="countries">Countries</string>
    <string name="home_menu_item">Home</string>
    <string name="region_menu_item">Region</string>
    <string name="favorites_menu_item">Favorites</string>
    <string name="app_version_no">Version 1.0</string>
    <string name="developers_name">Ukeje Emeka</string>
    <string name="app_build_year">2019</string>
    <string name="rights_reserved_text">All Rights Reserved</string>
    <string name="app_description">The CountryPedia mobile application searches through all countries of the world via REST COUNTRY API</string>
    <string name="api_used">via REST COUNTRY API</string>
    <string name="splash_screen_loading_text">Setting up CountryPedia…</string>
    <string name="app_logo">app logo</string>
    <string name="capital_is_text">It\'s capital is %s</string>
    <string name="region_title">Region</string>
    <string name="country_code_title">Country Code</string>
    <string name="currency_title">Currency</string>
    <string name="plus_sign">+ %s</string>
    <string name="time_zones_title">Time Zones</string>
    <string name="more_information_title">More Information</string>
    <string name="population_title">Population:</string>
    <string name="languages_title">Languages:</string>
    <string name="alt_spelling_title">Alt. Spelling:</string>
    <string name="coordinates_title">Coordinates:</string>
    <string name="long_and_lat">%s(Lat)%s(Long)</string>
    <string name="search_result_not_found">Search Result Not Found</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="region_text">Region:</string>
</resources>
