<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/about_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/info_colors"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/info_colors"
        android:textSize="20sp"
        android:textStyle="normal"
        android:text="@string/app_version_no"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/info_colors"
        android:textSize="20sp"
        android:textStyle="normal"
        android:text="@string/app_build_year"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/info_colors"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/developers_name"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/info_colors"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/rights_reserved_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/info_colors"
        android:textSize="15sp"
        android:textStyle="normal"
        android:text="@string/app_description"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/info_colors"
        android:textSize="15sp"
        android:textStyle="normal"
        android:text="@string/api_used"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="24dp"
        android:layout_marginTop="3dp"/>







</LinearLayout>