<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        
        <variable name="countryName" type="String"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        tools:context=".MainActivity">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.4"
                android:background="#e5e5e5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/country_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/country_name"
                    android:textColor="#5A5A5A"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/capital_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/capital_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/capital_name"
                    android:textColor="#5A5A5A"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toTopOf="@+id/know_more_field"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/country_title" />

                <TextView
                    android:id="@+id/know_more_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/know_more_text"
                    android:textColor="#20889F"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/capital_name" />
            </android.support.constraint.ConstraintLayout>

            <android.support.design.widget.CoordinatorLayout
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:id="@+id/coordinatorLayout"
                android:layout_width="match_parent"
                android:fitsSystemWindows="false"
                android:layout_height="86dp"
                android:background="#cecece"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="48dp"
                        android:layout_marginEnd="48dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/edit_background"
                        android:inputType="text"
                        android:elevation="5dp"
                        android:text="@{countryName}"
                        android:hint="@string/country_search"
                        android:textSize="18sp"
                        android:paddingStart="20dp"
                        android:textColorHint="#b3b3b3"
                        android:textColor="#787878"
                        app:layout_constraintBottom_toTopOf="@+id/guideline"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <android.support.constraint.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_begin="215dp" />


                </android.support.constraint.ConstraintLayout>


                <android.support.design.bottomappbar.BottomAppBar
                    android:id="@+id/bottomAppBar"
                    style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="bottom"
                    app:backgroundTint="#266876"
                    app:navigationIcon="@drawable/menu_icon">

                </android.support.design.bottomappbar.BottomAppBar>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/continent_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/globe_icon"
                    app:backgroundTint="#000000"
                    app:fabSize="normal"
                    app:layout_anchor="@id/bottomAppBar" />

            </android.support.design.widget.CoordinatorLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</layout>